openshift/app.dc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: medis-etl-app
    app.kubernetes.io/component: medis-etl-app
    app.kubernetes.io/instance: medis-etl-app
    app.kubernetes.io/name: medis-etl-app
    app.kubernetes.io/part-of: medis-etl
    app.openshift.io/runtime: java-springboot-camel
  name: medis-etl-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: medis-etl-app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: medis-etl-app
        deployment: medis-etl-app-deployment
    spec:
      containers:
      - env:
        - name: DEBUG_PORT
          value: "5858"
        - name: PROJECTS_ROOT
          value: /projects
        - name: PROJECT_SOURCE
          value: /projects
        image: image-registry.openshift-image-registry.svc:5000/c2da03-dev/medis-etl-image:latest
        imagePullPolicy: Always
        name: etl-camel
        ports:
        - containerPort: 8080
          name: http-springboot
          protocol: TCP
        - containerPort: 5858
          name: debug
          protocol: TCP
        resources:
          limits:
            memory: 768Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /data
          name: medis-etl-files
        - mountPath: /app/config
          name: medis-etl-config
        - mountPath: /ssh
          name: medis-etl-ssh
          readOnly: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: medis-etl-files
        persistentVolumeClaim:
          claimName: medis-etl-pvc
      - name: medis-etl-config
        configMap:
          name: medis-etl-config
      - name: medis-etl-ssh
        secret:
          defaultMode: 400
          secretName: medis-etl
