openshift/app.svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: medis-etl-app
    app.kubernetes.io/component: medis-etl-app
    app.kubernetes.io/instance: medis-etl-app
    app.kubernetes.io/name: medis-etl-app
    app.kubernetes.io/part-of: medis-etl
    app.openshift.io/runtime: java-springboot-camel
  name: medis-etl-app
spec:
  ports:
  - name: http-springboot
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: http-8081
    port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    app: medis-etl-app
    deployment: medis-etl-app-deployment
  sessionAffinity: None
