openshift/app.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: medis-etl-app
    app.kubernetes.io/component: medis-etl-app
    app.kubernetes.io/instance: medis-etl-app
    app.kubernetes.io/name: medis-etl-app
    app.kubernetes.io/part-of: medis-etl
    app.openshift.io/runtime: java-springboot-camel
  name: medis-etl-app
spec:
  port:
    targetPort: "8081"
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: medis-etl-app
    weight: 100
  wildcardPolicy: None
